@@ -1,3 +1,7 @@
+// $Id$
+
+
+
 conditional_include "wb26dll"
 
 additional_natures = org.eclipse.cdt.core.cnature org.eclipse.cdt.core.ccnature
