@@ -1,3 +1,15 @@
+Fri Aug  6 14:12:30 UTC 2010  Adam Mitz  <mitza@ociweb.com>
+
+        * docs/html/WB26.html:
+
+          Added documentation for -type wb26, this was contributed by
+          Johnny Willemsen  <jwillemsen at remedy dot nl>.
+
+        * templates/wb30dll.mpt:
+        * templates/wb30exe.mpt:
+
+          Added dollar-Id-dollar in comments.
+
 Fri Aug  6 00:06:41 UTC 2010  Chad Elliott  <elliott_c@ociweb.com>
 
         * modules/CDT6ProjectCreator.pm:
